# wayrustyvibes

./: Cargo.toml  config.json
src/: keycode.rs  main.rs  play_sound.rs
