[package]
name = "wayrustyvibes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evdev = "*"
evdev-rs = "*"
serde = { version = "1", features = ["derive"] }
flume = "0.10.9"
serde_json = "1"
once_cell = "1.8.0"
# rodio = "*"
rodio_wav_fix = "0.15.0"
